--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,10 @@
 <h1><%= @article.title %></h1>
+<%= link_to "Edit Article", edit_article_path %>
+<%= link_to "Delete Article",
+            article_path(@article),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+
 <p><%= @article.content %></p>
 
 <%= link_to "Back to all articles", articles_path %>
